--- a/aws-java-sdk-cloudfront/pom.xml
+++ b/aws-java-sdk-cloudfront/pom.xml
@@ -9,15 +9,15 @@
 		<version>1.10.47-SNAPSHOT</version>
 	</parent>
 	<groupId>com.amazonaws</groupId>
-	<artifactId>aws-java-sdk-cloudfront</artifactId>
-	<name>AWS Java SDK for Amazon CloudFront</name>
+	<artifactId>ksc-java-sdk-cloudfront</artifactId>
+	<name>ksc Java SDK for Amazon CloudFront</name>
 	<description>The AWS Java SDK for Amazon CloudFront module holds the client classes that are used for communicating with Amazon CloudFront Service</description>
 	<url>https://aws.amazon.com/sdkforjava</url>
 	<dependencies>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-core</artifactId>
-			<version>1.10.46</version>
+			<version>1.10.47-SNAPSHOT</version>
 			<optional>false</optional>
 		</dependency>
 	    <dependency>
