添加实时状态码命中率统计接口

--- a/aws-java-sdk-cloudfront/pom.xml
+++ b/aws-java-sdk-cloudfront/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.amazonaws</groupId>
 	<artifactId>ksc-java-sdk-cloudfront</artifactId>
+	<version>1.10.47.01</version>
 	<name>ksc Java SDK for Amazon CloudFront</name>
 	<description>The AWS Java SDK for Amazon CloudFront module holds the client classes that are used for communicating with Amazon CloudFront Service</description>
 	<url>https://aws.amazon.com/sdkforjava</url>
