--- a/aws-java-sdk-cloudfront/pom.xml
+++ b/aws-java-sdk-cloudfront/pom.xml
@@ -10,15 +10,15 @@
 	</parent>
 	<groupId>com.amazonaws</groupId>
 	<artifactId>ksc-java-sdk-cloudfront</artifactId>
-	<version>1.10.47.04</version>
+	<version>1.10.47.05-SNAPSHOT</version>
 	<name>ksc Java SDK for Amazon CloudFront</name>
 	<description>The AWS Java SDK for Amazon CloudFront module holds the client classes that are used for communicating with Amazon CloudFront Service</description>
 	<url>https://aws.amazon.com/sdkforjava</url>
 	<dependencies>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-core</artifactId>
-			<version>1.10.47-SNAPSHOT</version>
+			<artifactId>ksc-aws-java-sdk-core</artifactId>
+			<version>1.10.47.04</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
