--- a/aws-java-sdk-cloudfront/pom.xml
+++ b/aws-java-sdk-cloudfront/pom.xml
@@ -17,7 +17,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-core</artifactId>
+			<artifactId>ksc-aws-java-sdk-core</artifactId>
 			<version>1.10.47-SNAPSHOT</version>
 		</dependency>
 		<dependency>
